Fix item id and sku name overlapping issue. Update price key.

--- a/promowebweb/src/main/webapp/resources/css/promotion.css
+++ b/promowebweb/src/main/webapp/resources/css/promotion.css
@@ -40,6 +40,11 @@
 	overflow: hidden;
 }
 
+table.dataTable tbody td,
+table.dataTable tbody th {
+	word-break: break-all;
+}
+
 table.dataTable thead th.text-left {
 	text-align: left;
 }
